<resources>
    <string name="app_name">cse489_2025_3_2022_3_60_022</string>

    <string name="placeholder">placeholder</string>

    <!-- Titles -->
    <string name="attendance">Attendance</string>
    <string name="student_profile">Student Profile</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>

    <!-- Buttons -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="add_student">Add Student</string>
    <string name="loginGo">Login//Go</string>
    <string name="SignGo">SignUp//Go</string>

    <!-- List View Header -->
    <string name="sid">SID</string>
    <string name="student_name">Student Name</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="default_sid">0000-0-00-000</string>
    <string name="stat">Stat</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="student_id">Student ID</string>

    <!-- Extra -->
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="remember_user">Remember User</string>
    <string name="remember_password">Remember Password</string>
    <string name="remember_login">Remember Login</string>
    <string name="dont_have_acc">Don\'t have Account</string>
    <string name="already_have_acc">Already have Account</string>


</resources>