<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Title-->
    <TextView
        android:id="@+id/tvSignUpTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/app_title_bg"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/app_title_fg"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserIdSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etUserIdSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="12"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRetypePasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retype_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etRetypePasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbRememberUserSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_user" />

        <CheckBox
            android:id="@+id/cbRememberPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_password" />


    </LinearLayout>

    <Button
        android:id="@+id/btnHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/app_bg"
        android:text="@string/already_have_acc"
        android:textColor="@color/app_fg" />

    <LinearLayout
        android:id="@+id/llBottomButtonsSignUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExitSignUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_title_bg"
            android:text="@string/exit"
            android:textColor="@color/app_title_fg" />

        <Button
            android:id="@+id/btnSignUpGo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_title_bg"
            android:text="@string/SignGo"
            android:textColor="@color/app_title_fg" />
    </LinearLayout>

</LinearLayout>
