<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <!-- Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/app_title_bg"
        android:gravity="center"
        android:text="@string/attendance"
        android:textColor="@color/app_title_fg"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Main-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@color/app_primary_bg"
        android:orientation="vertical">

        <!-- Course Code & Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCourseCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="7"/>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/app_secondary_bg"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sid"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/student_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/p"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/a"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stat"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>
        
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lvStudents"/>

    </LinearLayout>

    <!-- Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_title_bg"
            android:textColor="@color/app_title_fg"
            android:text="@string/exit" />

        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_title_bg"
            android:textColor="@color/app_title_fg"
            android:text="@string/add_student" />

    </LinearLayout>

</LinearLayout>